# qc-synth

./: .env  LICENSE  README.md  app.py  audio_generator.py  debug_measurement.py  debug_x_gate.py  packages.txt  pyproject.toml  quantum_engine.py  quantum_synth.py  requirements.txt  test_circuit_diagram.py  test_complex_circuit.py  test_demo.py  test_qiskit_upgrade.py  test_x_gate_web.py
