[project]
name = "qc-synth"
version = "0.1.0"
description = "Educational quantum circuit synthesizer using IBM Qiskit and Streamlit"
authors = [
    {name = "Quantum Synth Team", email = "team@quantumsynth.dev"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9,<3.14"
dependencies = [
    "qiskit>=1.0.0",
    "streamlit>=1.28.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "plotly>=5.15.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "pylatexenc>=2.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
